# GenFlows

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
examples/: compare_models.py  sample.py  train.py
examples/lobes/: run_perlmutter.sh  run_vista.sh  sample.py  sample_and_plot.ipynb  sample_inpaint.py  train.py  train_inpaint.py
examples/lobes/CNN/: evaluate.py  fit_CNN10.ipynb  train.py
examples/lobes/big_reservoir/: generate.py  visualize.ipynb
examples/lobes/cond_sensitivity/: generate.py  visualize.ipynb
examples/lobes/inpainting/: evaluate.py  run_perlmutter.sh  sample.py  sample_and_plot.ipynb  train.py
examples/lobes/inpainting_interactive/: CLAUDE.md  generate_plots.py  run_perlmutter.sh  sample.py  sample_and_plot.ipynb  train.py
examples/lobes/standard/: evaluate.py  run_perlmutter.sh  run_vista.sh  sample.py  sample_and_plot.ipynb  train.py
examples/mnist/: run_perlmutter.sh  sample.py  train.py
examples/reservoirs/: well_check.py
genflows/assembly/: __init__.py  big_reservoir_multi.py  reservoir.py
genflows/methods/: diffusion.py  flow_matching.py  meanflow.py  rectified_flow.py
genflows/models/: cnn3d.py  unet.py  unet3d.py
genflows/utils/: data_lobes.py  data_reservoirs.py  evaluation.py  masking.py  masking_lobes.py  plotting.py  training.py
resflow/assembly/: __init__.py  reservoir.py
resflow/methods/: rectified_flow.py
resflow/models/: unet.py  unet3d.py
resflow/utils/: data.py  data_lobes.py  data_reservoirs.py  evaluation.py  masking.py  masking_lobes.py  plotting.py  plotting_lobes.py
(+38 files in other folders)
