[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "resflow"
version = "0.1.0"
description = "ResFlow: 3D generative models for siliciclastic-reservoir simulation"
requires-python = ">=3.9"
dependencies = [
    "torch",
    "torchvision",
    "matplotlib",
    "tqdm",
    "accelerate",
    "pandas",
    "pyarrow",
    "huggingface_hub",
]

[tool.setuptools.packages.find]
include = ["resflow*"]
